<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="bookshelf_display_label_display">Display</string>
    <string name="bookshelf_display_button_grid">Grid</string>
    <string name="bookshelf_display_button_list">List</string>
    <string name="bookshelf_display_label_order_by">Order by</string>
    <string name="bookshelf_display_button_file_name">File name</string>
    <string name="bookshelf_display_button_date_and_time">Timestamp</string>
    <string name="bookshelf_display_button_file_size">File size</string>
    <string name="bookshelf_display_label_sort_order">Sort order</string>
    <string name="bookshelf_display_button_asc">asc</string>
    <string name="bookshelf_display_button_desc">desc</string>
</resources>
