<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        tools:layout_gravity="end"
        tools:layout_width="200dp">

        <TextView
            android:id="@+id/view_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bookshelf_display_label_display"
            android:textAppearance="?attr/textAppearanceLabelLarge" />

        <RadioGroup
            android:id="@+id/view_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/view_type_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookshelf_display_button_grid" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/view_type_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookshelf_display_button_list" />
        </RadioGroup>

        <TextView
            android:id="@+id/span_count_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="一行に表示する数"
            android:textAppearance="?attr/textAppearanceLabelLarge" />

        <com.google.android.material.slider.Slider
            android:id="@+id/span_count_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1.0"
            android:valueFrom="2"
            android:valueTo="4" />

        <TextView
            android:id="@+id/sort_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bookshelf_display_label_order_by"
            android:textAppearance="?attr/textAppearanceLabelLarge" />

        <RadioGroup
            android:id="@+id/sort_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/sort_type_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookshelf_display_button_file_name"
                app:icon="@drawable/ic_twotone_sort_by_alpha_24" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/sort_type_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookshelf_display_button_date_and_time"
                app:icon="@drawable/ic_twotone_calendar_today_24" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/sort_type_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookshelf_display_button_file_size"
                app:icon="@drawable/ic_twotone_sort_24" />

        </RadioGroup>

        <TextView
            android:id="@+id/order_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bookshelf_display_label_sort_order"
            android:textAppearance="?attr/textAppearanceLabelLarge" />

        <RadioGroup
            android:id="@+id/order_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/order_type_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookshelf_display_button_asc"
                app:icon="@drawable/sort_ascending" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/order_type_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookshelf_display_button_desc"
                app:icon="@drawable/sort_descending" />
        </RadioGroup>
    </LinearLayout>
</layout>
